# demo-spec-kit-with-cursor

./: .gitignore  JOURNAL.md  README.md  pyproject.toml  requirements.txt
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
specs/001-cbr-exchange-rate/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cbr-exchange-rate/checklists/: requirements.md
specs/001-cbr-exchange-rate/contracts/: cbr-api-contract.md  cli-contract.md
specs/001-require-interval-days/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-require-interval-days/checklists/: requirements.md
specs/001-require-interval-days/contracts/: cli-contract.md
specs/002-moscow-exchange-candles/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-moscow-exchange-candles/checklists/: requirements.md
specs/002-moscow-exchange-candles/contracts/: cli-contract.md  moex-api-contract.md
src/cli/: __init__.py  main.py
src/models/: __init__.py  candles.py  exchange_rate.py
src/services/: __init__.py  cbr_client.py  moex_client.py  parquet_writer.py  xlsx_writer.py
src/utils/: __init__.py  date_utils.py  validators.py
tests/: __init__.py
tests/integration/: test_end_to_end.py
tests/unit/: test_cbr_client.py  test_date_utils.py  test_moex_client.py  test_parquet_writer.py  test_validators.py  test_xlsx_writer.py
